docs/apache-airflow-providers-google/14.1.0/_sources/_api/airflow/providers/google/cloud/sensors/gcs/index.rst.txt
airflow.providers.google.cloud.sensors.gcs
==========================================

.. py:module:: airflow.providers.google.cloud.sensors.gcs

.. autoapi-nested-parse::

   This module contains Google Cloud Storage sensors.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.sensors.gcs.GCSObjectExistenceSensor
   airflow.providers.google.cloud.sensors.gcs.GCSObjectUpdateSensor
   airflow.providers.google.cloud.sensors.gcs.GCSObjectsWithPrefixExistenceSensor
   airflow.providers.google.cloud.sensors.gcs.GCSUploadSessionCompleteSensor


Functions
---------

.. autoapisummary::

   airflow.providers.google.cloud.sensors.gcs.ts_function
   airflow.providers.google.cloud.sensors.gcs.get_time


Module Contents
---------------

.. py:class:: GCSObjectExistenceSensor(*, bucket, object, use_glob = False, google_cloud_conn_id = 'google_cloud_default', impersonation_chain = None, retry = DEFAULT_RETRY, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`


   Checks for the existence of a file in Google Cloud Storage.

   :param bucket: The Google Cloud Storage bucket where the object is.
   :param object: The name of the object to check in the Google cloud
       storage bucket.
   :param use_glob: When set to True the object parameter is interpreted as glob
   :param google_cloud_conn_id: The connection ID to use when
       connecting to Google Cloud Storage.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param retry: (Optional) How to retry the RPC


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('bucket', 'object', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#f0eee4'



   .. py:attribute:: bucket


   .. py:attribute:: object


   .. py:attribute:: use_glob
      :value: False



   .. py:attribute:: google_cloud_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: retry


   .. py:attribute:: deferrable
      :value: True



   .. py:method:: poke(context)

      Override when deriving this class.



   .. py:method:: execute(context)

      Airflow runs this method on the worker and defers using the trigger.



   .. py:method:: execute_complete(context, event)

      Act as a callback for when the trigger fires - returns immediately.

      Relies on trigger to throw an exception, otherwise it assumes execution was successful.



.. py:function:: ts_function(context)

   Act as a default callback for the GoogleCloudStorageObjectUpdatedSensor.

   The default behaviour is check for the object being updated after the data
   interval's end.


.. py:class:: GCSObjectUpdateSensor(bucket, object, ts_func = ts_function, google_cloud_conn_id = 'google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`


   Checks if an object is updated in Google Cloud Storage.

   :param bucket: The Google Cloud Storage bucket where the object is.
   :param object: The name of the object to download in the Google cloud
       storage bucket.
   :param ts_func: Callback for defining the update condition. The default callback
       returns logical_date + schedule_interval. The callback takes the context
       as parameter.
   :param google_cloud_conn_id: The connection ID to use when
       connecting to Google Cloud Storage.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param deferrable: Run sensor in deferrable mode


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('bucket', 'object', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#f0eee4'



   .. py:attribute:: bucket


   .. py:attribute:: object


   .. py:attribute:: ts_func


   .. py:attribute:: google_cloud_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: deferrable
      :value: True



   .. py:method:: poke(context)

      Override when deriving this class.



   .. py:method:: execute(context)

      Airflow runs this method on the worker and defers using the trigger.



   .. py:method:: execute_complete(context, event = None)

      Return immediately and rely on trigger to throw a success event. Callback for the trigger.



.. py:class:: GCSObjectsWithPrefixExistenceSensor(bucket, prefix, google_cloud_conn_id = 'google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`


   Checks for the existence of GCS objects at a given prefix, passing matches via XCom.

   When files matching the given prefix are found, the poke method's criteria will be
   fulfilled and the matching objects will be returned from the operator and passed
   through XCom for downstream tasks.

   :param bucket: The Google Cloud Storage bucket where the object is.
   :param prefix: The name of the prefix to check in the Google cloud
       storage bucket.
   :param google_cloud_conn_id: The connection ID to use when
       connecting to Google Cloud Storage.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param deferrable: Run sensor in deferrable mode


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('bucket', 'prefix', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#f0eee4'



   .. py:attribute:: bucket


   .. py:attribute:: prefix


   .. py:attribute:: google_cloud_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: deferrable
      :value: True



   .. py:method:: poke(context)

      Override when deriving this class.



   .. py:method:: execute(context)

      Overridden to allow matches to be passed.



   .. py:method:: execute_complete(context, event)

      Return immediately and rely on trigger to throw a success event. Callback for the trigger.



.. py:function:: get_time()

   Act as a wrapper of datetime.datetime.now to simplify mocking in the unittests.


.. py:class:: GCSUploadSessionCompleteSensor(bucket, prefix, inactivity_period = 60 * 60, min_objects = 1, previous_objects = None, allow_delete = True, google_cloud_conn_id = 'google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`


   Return True if the inactivity period has passed with no increase in the number of objects in the bucket.

   Checks for changes in the number of objects at prefix in Google Cloud Storage
   bucket and returns True if the inactivity period has passed with no
   increase in the number of objects. Note, this sensor will not behave correctly
   in reschedule mode, as the state of the listed objects in the GCS bucket will
   be lost between rescheduled invocations.

   :param bucket: The Google Cloud Storage bucket where the objects are.
       expected.
   :param prefix: The name of the prefix to check in the Google cloud
       storage bucket.
   :param inactivity_period: The total seconds of inactivity to designate
       an upload session is over. Note, this mechanism is not real time and
       this operator may not return until a poke_interval after this period
       has passed with no additional objects sensed.
   :param min_objects: The minimum number of objects needed for upload session
       to be considered valid.
   :param previous_objects: The set of object ids found during the last poke.
   :param allow_delete: Should this sensor consider objects being deleted
       between pokes valid behavior. If true a warning message will be logged
       when this happens. If false an error will be raised.
   :param google_cloud_conn_id: The connection ID to use when connecting
       to Google Cloud Storage.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param deferrable: Run sensor in deferrable mode


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('bucket', 'prefix', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#f0eee4'



   .. py:attribute:: bucket


   .. py:attribute:: prefix


   .. py:attribute:: inactivity_period
      :value: 3600



   .. py:attribute:: min_objects
      :value: 1



   .. py:attribute:: previous_objects


   .. py:attribute:: inactivity_seconds
      :value: 0



   .. py:attribute:: allow_delete
      :value: True



   .. py:attribute:: google_cloud_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: last_activity_time
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: hook
      :type:  airflow.providers.google.cloud.hooks.gcs.GCSHook | None
      :value: None



   .. py:attribute:: deferrable
      :value: True



   .. py:method:: is_bucket_updated(current_objects)

      Check whether new objects have been added and the inactivity_period has passed, and update the state.

      :param current_objects: set of object ids in bucket during last poke.



   .. py:method:: poke(context)

      Override when deriving this class.



   .. py:method:: execute(context)

      Airflow runs this method on the worker and defers using the trigger.



   .. py:method:: execute_complete(context, event = None)

      Rely on trigger to throw an exception, otherwise it assumes execution was successful.

      Callback for when the trigger fires - returns immediately.




